Fixed position of dropbox button on mobile to be visible on screen

--- a/app/assets/stylesheets/frontpage.css.scss
+++ b/app/assets/stylesheets/frontpage.css.scss
@@ -180,6 +180,15 @@ body {
     font-size: 1em;
     line-height: 1.4em;
   }
+  .linker {
+    margin-top: 30px;
+  }
+  .footer {
+    background-color: white;
+  }
+  .frontpage_account {
+    font-size: .8em;
+  }
 }
 .footer_container {
   width: 80%;
